<resources>
    <string name="inventory_db_file_name">inventory.db</string>


    <string name="app_name">PCH CardBook</string>
    <string name="main_activity_name">Series</string>
    <string name="card_activity_name">Cards</string>
    <string name="card_detail_activity_name">Details</string>
    <string name="qr_scanner_activity_name">Scan</string>
    <string name="database_update_activity_name">Update</string>
    <string name="first_database_update_activity_name">Download Initial Data</string>
    <string name="main_load_activity_name">Load</string>
    <string name="profile_activity_name">Profile</string>
    <string name="search_activity_name">Search</string>
    <string name="image_crop_activity_name">Create Icon</string>
    <string name="statistics_activity_name">Statistics</string>
    <string name="setting_activity_name">Setting</string>
    <string name="system_activity_name">System</string>
    <string name="about_activity_name">About</string>


    <string name="main_load_title">Loading...</string>


    <string name="profile_default_name">Prichan Idol</string>
    <string name="info_profile_saved">New profile is saved.</string>
    <string name="exception_profile_name_too_long">Error: New name cannot be longer than %d.</string>
    <string name="exception_profile_save_fail">Error: Cannot save the new profile.</string>
    <string name="exception_profile_crop_icon_fail">Error: Cannot create new icon.</string>


    <string name="search_item_name_input_1">Item Name 1:</string>
    <string name="search_item_name_input_2">Item Name 2:</string>
    <string name="search_item_name_input_3">Item Name 3:</string>
    <string name="search_item_name_input_4">Item Name 4:</string>
    <string name="search_button_search">Search!</string>
    <string name="search_result_database_name">Search Result</string>


    <string name="setting_item_1">Display non-possessed item image without color</string>
    <string name="setting_item_2">Display JR inventory status by number</string>
    <string name="setting_item_3">Show item detail by long click\nIncrease item inventory by click</string>


    <string name="system_export_inventory_database">Export Item Inventory Data to External Storage</string>
    <string name="system_import_inventory_database">Import Item Inventory Data from External Storage</string>
    <string name="system_bluetooth_send_inventory_database">Send Item Inventory Data via Bluetooth</string>
    <string name="system_bluetooth_receive_inventory_database">Receive Item Inventory Data via Bluetooth</string>
    <string name="system_check_item_database">Re-Check Item Database</string>
    <string name="system_clear_item_database">Clear Item Database</string>
    <string name="system_clear_item_inventory_database">Clear Item Inventory Data</string>

    <string name="system_double_confirmation_title">Double Confirmation</string>
    <string name="system_double_confirmation_message">Do you want to continue?</string>

    <string name="system_export_inventory_database_done">Successfully exported</string>
    <string name="system_export_inventory_database_fail">Failed to export</string>
    <string name="system_import_inventory_database_done">Successfully imported</string>
    <string name="system_import_inventory_database_fail">Failed to import</string>
    <string name="system_clear_inventory_database_done">Successfully cleared</string>


    <string name="about_version_number">Version</string>
    <string name="about_user_agreement">User Agreement</string>
    <string name="about_license_info">License</string>


    <string name="qr_scanner_info_cannot_recognize">Cannot Recognize</string>
    <string name="qr_scanner_info_update_local_database">Please Update Database</string>


    <string name="database_name_lack_item_2018">All Lack Items in 2018</string>


    <string name="card_detail_category">Category</string>
    <string name="card_detail_color">Color</string>
    <string name="card_detail_brand">Brand</string>
    <string name="card_detail_type">Type</string>
    <string name="card_detail_rarity">Rarity</string>
    <string name="card_detail_score">Score</string>
    <string name="card_detail_inventory_count">Amount:</string>

    <string name="card_detail_JR_color_pink">Pink</string>
    <string name="card_detail_JR_color_yellow">Yellow</string>
    <string name="card_detail_JR_color_blue">Blue</string>
    <string name="card_detail_JR_color_red">Red</string>
    <string name="card_detail_JR_color_green">Green</string>
    <string name="card_detail_JR_color_purple">Purple</string>
    <string name="card_detail_JR_color_black">Black</string>
    <string name="card_detail_JR_color_gold">Gold</string>
    <string name="card_detail_JR_color_white">White</string>
    <string name="card_detail_JR_color_rainbow">Rainbow</string>

    <string name="card_detail_item_name_copied">Item name is copied to clipboard</string>


    <string name="navigation_menu_item_name_profile">Profile</string>
    <string name="navigation_menu_item_name_search">Search</string>
    <string name="navigation_menu_item_name_statistics">Statistics</string>
    <string name="navigation_menu_item_name_qrcode">QR Code</string>
    <string name="navigation_menu_item_name_generate">Generate</string>
    <string name="navigation_menu_item_name_setting">Setting</string>
    <string name="navigation_menu_item_name_system">System</string>
    <string name="navigation_menu_item_name_update">Update</string>
    <string name="navigation_menu_item_name_about">About</string>
    <string name="navigation_menu_item_name_exit">Exit</string>


    <string name="button_yes_text">Yes</string>
    <string name="button_no_text">No</string>
    <string name="button_start_text">Start</string>
    <string name="button_stop_text">Stop</string>
    <string name="button_save_text">Save</string>
    <string name="button_cancel_text">Cancel</string>

    <string name="lable_loading_text">Loading...</string>
    <string name="lable_calculating_text">Calculating...</string>


    <string name="database_update_checkbox_season1">1ST Season</string>
    <string name="database_update_checkbox_season2">2ND Season</string>


    <string name="info_download_no_wifi_title">WIFI Connection</string>
    <string name="info_download_no_wifi_message">No WIFI connection is detected. Continue?</string>
    <string name="info_download_first_time_download_database_title">Download</string>
    <string name="info_download_first_time_download_database_message">Do you want to download the initial data?</string>
    <string name="info_download_no_internet_connection_title">Network Connection</string>
    <string name="info_download_no_internet_connection_message">No network connection</string>
    <string name="info_download_no_updater_selected_title">No Updater</string>
    <string name="info_download_no_updater_selected_message">Please select at least one season to update.</string>
    <string name="info_download_error_no_internet">Error: Cannot connect to network.</string>
    <string name="info_download_error_app_update_required">Error: Incorrect URL. Please update the app.</string>
    <string name="info_download_error_official_server_malfunction">Error: Server error. Please try again later.</string>
    <string name="info_download_error_directory_creation_failed">Error: Cannot create directory.</string>


    <string name="info_download_progress">Progress:</string>
    <string name="info_download_standby">Standby</string>
    <string name="info_download_pages_list">Retrieving series list</string>
    <string name="info_download_coordinates">Retrieving items</string>
    <string name="info_download_coordinate_images">Retrieving item images</string>
    <string name="info_download_write_meta_file">Saving data</string>
    <string name="info_download_complete">Finish</string>


    <string name="permission_request_rationale_camera">Permission Request: We need to use the camera to read QR code.</string>
    <string name="permission_request_rationale_network">Permission Request: We need to use Internet to download item data.</string>
    <string name="permission_request_rationale_read_external_storage_imagecropactivity">Permission Request: We need to read external storage to generate icon.</string>
    <string name="permission_request_rationale_read_external_storage_systemactivity">Permission Request: We need to read external storage to import inventory data.</string>
    <string name="permission_request_rationale_write_external_storage_systemactivity">Permission Request: We need to write external storage to export inventory data.</string>


    <string name="exception_no_permission_runtime">Error: Cannot get the required permission.</string>


    <string name="open">Open</string>
    <string name="close">Close</string>


</resources>
