<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/profile_menu_item"
            android:icon="@drawable/ic_function_profile"
            android:title="@string/navigation_menu_item_name_profile" />

        <item
            android:id="@+id/statistics_menu_item"
            android:icon="@drawable/ic_function_statistics"
            android:title="@string/navigation_menu_item_name_statistics" />

        <item
            android:id="@+id/qrcode_menu_item"
            android:icon="@drawable/ic_function_qrcode"
            android:title="@string/navigation_menu_item_name_qrcode" />

        <!--<item-->
            <!--android:id="@+id/generate_menu_item"-->
            <!--android:icon="@drawable/ic_function_generate"-->
            <!--android:title="@string/navigation_menu_item_name_generate" />-->

        <item
            android:id="@+id/setting_menu_item"
            android:icon="@drawable/ic_function_setting"
            android:title="@string/navigation_menu_item_name_setting" />

        <item
            android:id="@+id/system_menu_item"
            android:icon="@drawable/ic_function_system"
            android:title="@string/navigation_menu_item_name_system" />

        <item
            android:id="@+id/update_menu_item"
            android:icon="@drawable/ic_function_update"
            android:title="@string/navigation_menu_item_name_update" />

        <item
            android:id="@+id/about_menu_item"
            android:icon="@drawable/ic_function_about"
            android:title="@string/navigation_menu_item_name_about" />

        <item
            android:id="@+id/exit_menu_item"
            android:icon="@drawable/ic_function_exit"
            android:title="@string/navigation_menu_item_name_exit" />

    </group>

</menu>