<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.card.CardDetailActivity">

    <ImageView
        android:id="@+id/cardBigImageView"
        android:layout_width="180sp"
        android:layout_height="180sp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/cardNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_horizontal"
        android:text="Card Name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardBigImageView" />

    <TableLayout
        android:id="@+id/cardDetailTableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/inventoryJRColorSelectionScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardNameTextView">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <!-- Row 1 -->
            <TextView
                android:id="@+id/categoryLableTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/card_detail_category"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/colorLableTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/card_detail_color"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">

            <!-- Row 2 -->
            <TextView
                android:id="@+id/categoryContentTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/card_detail_category" />

            <TextView
                android:id="@+id/colorContentTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/card_detail_color" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <!-- Row 3 -->
            <TextView
                android:id="@+id/brandLableTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/card_detail_brand"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/typeLableTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/card_detail_type"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">

            <!-- Row 4 -->
            <ImageView
                android:id="@+id/brandContentImageView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal" />

            <ImageView
                android:id="@+id/typeContentImageView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <!-- Row 5 -->
            <TextView
                android:id="@+id/rarityLableTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/card_detail_rarity"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/scoreLableTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/card_detail_score"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">

            <!-- Row 6 -->
            <TextView
                android:id="@+id/rarityContentTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/card_detail_rarity" />

            <TextView
                android:id="@+id/scoreContentTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/card_detail_score" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <!-- Row 7 -->
            <TextView
                android:id="@+id/inventoryCountLabelTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/card_detail_inventory_count"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/inventoryCountContentTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/card_detail_inventory_count" />

            <Button
                android:id="@+id/inventoryIncreaseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+" />

            <Button
                android:id="@+id/inventoryDecreaseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-" />
        </TableRow>

    </TableLayout>

    <ScrollView
        android:id="@+id/inventoryJRColorSelectionScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardDetailTableLayout">

        <TableLayout
            android:id="@+id/inventoryJRColorSelectionTableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:stretchColumns="*"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/inventoryJRColorPinkButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/card_detail_JR_color_pink"
                    android:textAllCaps="false"
                    android:textColor="@color/JR_pink" />

                <Button
                    android:id="@+id/inventoryJRColorYellowButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/card_detail_JR_color_yellow"
                    android:textAllCaps="false"
                    android:textColor="@color/JR_yellow" />

                <Button
                    android:id="@+id/inventoryJRColorBlueButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/card_detail_JR_color_blue"
                    android:textColor="@color/JR_blue"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/inventoryJRColorRedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/card_detail_JR_color_red"
                    android:textColor="@color/JR_red"
                    android:textAllCaps="false" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">
                <Button
                    android:id="@+id/inventoryJRColorGreenButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/card_detail_JR_color_green"
                    android:textColor="@color/JR_green"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/inventoryJRColorPurpleButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/card_detail_JR_color_purple"
                    android:textColor="@color/JR_purple"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/inventoryJRColorBlackButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/card_detail_JR_color_black"
                    android:textColor="@color/JR_black"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/inventoryJRColorGoldButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/card_detail_JR_color_gold"
                    android:textColor="@color/JR_gold"
                    android:textAllCaps="false" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">
                <Button
                    android:id="@+id/inventoryJRColorWhiteButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/card_detail_JR_color_white"
                    android:textColor="@color/JR_white"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/inventoryJRColorRainbowButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/card_detail_JR_color_rainbow"
                    android:textColor="@color/JR_rainbow"
                    android:textAllCaps="false" />

            </TableRow>

        </TableLayout>
    </ScrollView>




</android.support.constraint.ConstraintLayout>