<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.search.SearchActivity">

    <RelativeLayout
        android:id="@+id/searchViewRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/nameInput1TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="35dp"
            android:lineSpacingExtra="14sp"
            android:text="@string/search_item_name_input_1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/nameInput2TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameInput1TextView"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="32dp"
            android:lineSpacingExtra="14sp"
            android:text="@string/search_item_name_input_2"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/itemName1EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            android:layout_toEndOf="@+id/nameInput1TextView"
            android:ems="10" />

        <EditText
            android:id="@+id/itemName2EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemName1EditText"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@+id/nameInput2TextView"
            android:ems="10" />

        <TableLayout
            android:id="@+id/characterButtonTableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemName2EditText"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:stretchColumns="*" >

            <!--Row 1-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/characterEmptyStarButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="☆"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/characterCrossButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="×"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/characterAmpersandButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="＆"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/characterExclamationButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="！"
                    android:textAllCaps="false" />
            </TableRow>

            <!--Row 2-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/characterEmptyHeartButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="♡"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/characterFilledHeartButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="♥"
                    android:textAllCaps="false" />

            </TableRow>

        </TableLayout>


        <ProgressBar
            android:id="@+id/searchProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="299dp"
            android:layout_height="36dp"
            android:layout_below="@id/characterButtonTableLayout"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="52dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="47dp" />

        <Button
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/searchProgressBar"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:text="@string/search_button_clear" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/searchProgressBar"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:text="@string/search_button_search" />

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>